--- a/ivahomepage.html
+++ b/ivahomepage.html
@@ -97,7 +97,7 @@
 
         <p class="mb-3">
           Studentica sam računarstva treće godine na <a href="https://www.ferit.unios.hr/">Fakultetu elektrotehnike,
-            računarstva i informacijskih tehnologija</a>. Rođena sam 14.2.2003 u <a href="https://www.osijek.hr/">gradu
+            računarstva i informacijskih tehnologija</a>. Rođena sam 14.2.2003. u <a href="https://www.osijek.hr/">gradu
             Osijeku</a>. Tijekom svog studija istakla sam se kao kreativna, ambiciozna
           i odgovorna osoba. Volontirala sam za nogometni klub <a href="https://nk-osijek.hr/">NK Osijek</a>, gdje sam
           razvila odlične komunikacijske vještine i vrlo dobru sposobnost prilagodbe promjenama. Smatram da sam izvrstan
