--- a/ivahomepage.html
+++ b/ivahomepage.html
@@ -139,7 +139,7 @@
               <i class="fas fa-language fa-3x skill-icon"></i>
               <div class="language-text">
                 <p><strong>HRVATSKI</strong></p>
-                <p>Materinji jezik</p>
+                <p>Materinski jezik</p>
                 <p><strong>ENGLESKI</strong></p>
                 <p>SLUŠANJE - Napredni C1</p>
                 <p>ČITANJE - Napredni C1</p>
