--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="team-card">
             <div class="img-wrapper">
               <a href="ivahomepage.html">
-              <img class="team-img" src="ivaa.jpg" alt="osoba1">
+                <img class="team-img" src="ivaa.jpg" alt="osoba1">
             </div>
             <p class="text-blk name">
               <a class="link" href="ivahomepage.html">Iva Bunjevac</a>
@@ -46,20 +46,46 @@
             </p>
           </div>
         </div>
+        <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
+          <div class="team-card">
+            <div class="img-wrapper">
+              <img class="team-img" src="ema.jpeg" alt="osoba3">
+            </div>
+            <p class="text-blk name">
+              <a class="link" href="https://yyemms.github.io/MMT-KV/CV.htmll">Ema Alduk</a>
+            </p>
+            <p class="text-blk position">
+              Studentica
+            </p>
+          </div>
+        </div>
+        <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
+          <div class="team-card">
+            <div class="img-wrapper">
+              <img class="team-img" src="0.png" alt="osoba4">
+            </div>
+            <p class="text-blk name">
+              <a class="link" href="">Ivan Berlančić,</a>
+            </p>
+            <p class="text-blk position">
+              Student
+            </p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </body>
 
-  <footer class="mt-5 text-center text-lg-start bg-white text-muted">
-    <div class="text-center p-3" style="background-color: rgba(107, 96, 96, 0.025); font-size: small;">
-      <p>
-        Web stranica je izrađena za vrijeme pohađanja <a href="https://www.ferit.unios.hr/">Elektrotehničkog
-          fakulteta u Osijeku</a> u sklopu kolegija <a
-          href="https://moodle.srce.hr/2023-2024/course/view.php?id=163509">Multimedijska tehnika</a>
-      </p>
-    </div>
-  </footer>
+<footer class="mt-5 text-center text-lg-start bg-white text-muted">
+  <div class="text-center p-3" style="background-color: rgba(107, 96, 96, 0.025); font-size: small;">
+    <p>
+      Web stranica je izrađena za vrijeme pohađanja <a href="https://www.ferit.unios.hr/">Elektrotehničkog
+        fakulteta u Osijeku</a> u sklopu kolegija <a
+        href="https://moodle.srce.hr/2023-2024/course/view.php?id=163509">Multimedijska tehnika</a>
+    </p>
+  </div>
+</footer>
 </body>
 
 </html>
