--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <img class="team-img" src="ema.jpeg" alt="osoba3">
             </div>
             <p class="text-blk name">
-              <a class="link" href="https://yyemms.github.io/MMT-KV/CV.htmll">Ema Alduk</a>
+              <a class="link" href="https://yyemms.github.io/MMT-KV/CV.html">Ema Alduk</a>
             </p>
             <p class="text-blk position">
               Studentica
