--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <img class="team-img" src="0.png" alt="osoba4">
             </div>
             <p class="text-blk name">
-              <a class="link" href="">Ivan Berlančić,</a>
+              <a class="link" href="">Ivan Berlančić</a>
             </p>
             <p class="text-blk position">
               Student
