--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <div class="img-wrapper">
               <a href="ivahomepage.html">
                 <img class="team-img" src="ivaa.jpg" alt="osoba1">
+              </a>
             </div>
             <p class="text-blk name">
               <a class="link" href="ivahomepage.html">Iva Bunjevac</a>
@@ -36,10 +37,12 @@
         <div class="responsive-cell-block wk-desk-6 wk-ipadp-6 wk-tab-6 wk-mobile-12 team-card-container">
           <div class="team-card">
             <div class="img-wrapper">
-              <img class="team-img" src="00.jpg" alt="osoba2">
+              <a href="davidhomepage.html"> <!-- Ispravljen atribut href -->
+                <img class="team-img" src="00.jpg" alt="osoba2">
+              </a>
             </div>
             <p class="text-blk name">
-              <a class="link" href=>David Budim</a>
+              <a class="link" href="davidhomepage.html">David Budim</a> <!-- Ispravljen atribut href -->
             </p>
             <p class="text-blk position">
               Student
@@ -49,10 +52,12 @@
         <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
           <div class="team-card">
             <div class="img-wrapper">
-              <img class="team-img" src="ema.jpeg" alt="osoba3">
+              <a href="emahomepage.html"> <!-- Ispravljen atribut href -->
+                <img class="team-img" src="0.png" alt="osoba3">
+              </a>
             </div>
             <p class="text-blk name">
-              <a class="link" href="https://yyemms.github.io/MMT-KV/CV.html">Ema Alduk</a>
+              <a class="link" href="emahomepage.html">Ema Alduk</a> <!-- Ispravljen atribut href -->
             </p>
             <p class="text-blk position">
               Studentica
@@ -62,10 +67,12 @@
         <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
           <div class="team-card">
             <div class="img-wrapper">
-              <img class="team-img" src="0.png" alt="osoba4">
+              <a href="ivanhomepage.html"> <!-- Ispravljen atribut href -->
+                <img class="team-img" src="0.png" alt="osoba4">
+              </a>
             </div>
             <p class="text-blk name">
-              <a class="link" href="">Ivan Berlančić</a>
+              <a class="link" href="ivanhomepage.html">Ivan Berlancic</a> <!-- Ispravljen atribut href -->
             </p>
             <p class="text-blk position">
               Student
@@ -86,6 +93,4 @@
     </p>
   </div>
 </footer>
-</body>
-
 </html>
