--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               </a>
             </div>
             <p class="text-blk name">
-              <a class="link" href="davidhomepage.html">David Budim</a> <!-- Ispravljen atribut href -->
+              <a class="link" href="davidhomepage.html">David Budim</a>
             </p>
             <p class="text-blk position">
               Student
@@ -52,12 +52,12 @@
         <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
           <div class="team-card">
             <div class="img-wrapper">
-              <a href="emahomepage.html"> <!-- Ispravljen atribut href -->
-                <img class="team-img" src="0.png" alt="osoba3">
+              <a href="emahomepage.html"> 
+                <img class="team-img" src="ema.jpeg" alt="osoba3">
               </a>
             </div>
             <p class="text-blk name">
-              <a class="link" href="emahomepage.html">Ema Alduk</a> <!-- Ispravljen atribut href -->
+              <a class="link" href="https://yyemms.github.io/MMT-KV/CV.html">Ema Alduk</a>
             </p>
             <p class="text-blk position">
               Studentica
@@ -67,12 +67,12 @@
         <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
           <div class="team-card">
             <div class="img-wrapper">
-              <a href="ivanhomepage.html"> <!-- Ispravljen atribut href -->
+              <a href="ivanhomepage.html"> 
                 <img class="team-img" src="0.png" alt="osoba4">
               </a>
             </div>
             <p class="text-blk name">
-              <a class="link" href="ivanhomepage.html">Ivan Berlancic</a> <!-- Ispravljen atribut href -->
+              <a class="link" href="ivanhomepage.html">Ivan Berlancic</a>
             </p>
             <p class="text-blk position">
               Student
