--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="responsive-cell-block wk-desk-6 wk-ipadp-6 wk-tab-6 wk-mobile-12 team-card-container">
           <div class="team-card">
             <div class="img-wrapper">
-              <a href="davidhomepage.html"> <!-- Ispravljen atribut href -->
+              <a href="davidhomepage.html"> 
                 <img class="team-img" src="00.jpg" alt="osoba2">
               </a>
             </div>
@@ -52,7 +52,7 @@
         <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
           <div class="team-card">
             <div class="img-wrapper">
-              <a href="emahomepage.html"> 
+              <a href="https://yyemms.github.io/MMT-KV/CV.html"> 
                 <img class="team-img" src="ema.jpeg" alt="osoba3">
               </a>
             </div>
