--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <div class="responsive-container-block outer-container">
     <div class="responsive-container-block inner-container">
       <p class="text-blk section-head-text">
-        Pogledajte naše životopise!
+        Odaberite životopis studenta!
       </p>
       <p class="text-blk section-subhead-text">
-        Pogledajte životopise ostalih studenata:
+        Za prikaz informacija o pojedinom studentu saznajte klikom na studenta.
       </p>
       <div class="responsive-container-block">
         <div class="responsive-cell-block wk-desk-6 wk-ipadp-6 wk-tab-6 wk-mobile-12 team-card-container">
@@ -24,7 +24,6 @@
             <div class="img-wrapper">
               <a href="ivahomepage.html">
                 <img class="team-img" src="ivaa.jpg" alt="osoba1">
-              </a>
             </div>
             <p class="text-blk name">
               <a class="link" href="ivahomepage.html">Iva Bunjevac</a>
@@ -37,42 +36,11 @@
         <div class="responsive-cell-block wk-desk-6 wk-ipadp-6 wk-tab-6 wk-mobile-12 team-card-container">
           <div class="team-card">
             <div class="img-wrapper">
-              <a href="davidhomepage.html"> 
-                <img class="team-img" src="00.jpg" alt="osoba2">
-              </a>
+              <a href="davidhomepage.html">
+                <img class="team-img" src="1.jpg" alt="osoba1">
             </div>
             <p class="text-blk name">
-              <a class="link" href="davidhomepage.html">David Budim</a>
-            </p>
-            <p class="text-blk position">
-              Student
-            </p>
-          </div>
-        </div>
-        <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
-          <div class="team-card">
-            <div class="img-wrapper">
-              <a href="https://yyemms.github.io/MMT-KV/CV.html"> 
-                <img class="team-img" src="ema.jpeg" alt="osoba3">
-              </a>
-            </div>
-            <p class="text-blk name">
-              <a class="link" href="https://yyemms.github.io/MMT-KV/CV.html">Ema Alduk</a>
-            </p>
-            <p class="text-blk position">
-              Studentica
-            </p>
-          </div>
-        </div>
-        <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
-          <div class="team-card">
-            <div class="img-wrapper">
-              <a href="ivanhomepage.html"> 
-                <img class="team-img" src="0.png" alt="osoba4">
-              </a>
-            </div>
-            <p class="text-blk name">
-              <a class="link" href="ivanhomepage.html">Ivan Berlancic</a>
+              <a class="link" href=>David Budim</a>
             </p>
             <p class="text-blk position">
               Student
@@ -80,9 +48,39 @@
           </div>
         </div>
       </div>
+        <div class="responsive-container-block additional-members">
+          <div class="responsive-cell-block wk-desk-6 wk-ipadp-6 wk-tab-6 wk-mobile-12 team-card-container">
+            <div class="team-card">
+              <div class="img-wrapper2">
+                <a href="https://yyemms.github.io/MMT-KV/CV.html">
+                  <img class="team-img" src="ema.jpeg" alt="osoba3">
+              </div>
+              <p class="text-blk name">
+                <a class="link" href="https://yyemms.github.io/MMT-KV/CV.html">Ema Alduk</a>
+              </p>
+              <p class="text-blk position">
+                Studentica
+              </p>
+            </div>
+          </div>
+          <div class="responsive-cell-block wk-desk-6 wk-ipadp-6 wk-tab-6 wk-mobile-12 team-card-container">
+            <div class="team-card">
+              <div class="img-wrapper2">
+                <a href="ivanhomepage.html">
+                  <img class="team-img" src="4.jpg" alt="osoba4">
+              </div>
+              <p class="text-blk name">
+                <a class="link" href="index.html">Ivan Berlancic</a>
+              </p>
+              <p class="text-blk position">
+                Student
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
-</body>
+
 
 <footer class="mt-5 text-center text-lg-start bg-white text-muted">
   <div class="text-center p-3" style="background-color: rgba(107, 96, 96, 0.025); font-size: small;">
@@ -93,4 +91,6 @@
     </p>
   </div>
 </footer>
+</body>
+
 </html>
