--- a/ivahomepage.html
+++ b/ivahomepage.html
@@ -152,6 +152,8 @@
               <div class="programming-text">
                 <p><strong>PROGRAMSKI JEZICI</strong></p>
                 <p>OSNOVNO ZNANJE - Python, Java, HTML, CSS, JavaScript, SQL, PHP</p>
+                <p><strong>BAZA PODATAKA</strong></p>
+                <p>OSNOVNO ZNANJE - SQL</p>
               </div>
             </div>
           </div>
